--- a/index.html
+++ b/index.html
@@ -2,16 +2,12 @@
 <html>
 
 <head>
-    <title>Singapore Food Agency</title>
+    <title>Derrick Lim Kai Hao</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Fonts -->
-    <!-- <link
-  href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@400;700&family=PT+Sans:wght@400;700&display=swap"
-  rel="stylesheet"
-/> -->
     <link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=PT+Sans+Caption:wght@400;700&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet" />
 
     <link href="css/bootstrap.min.css" rel="stylesheet" />
@@ -103,16 +99,34 @@
                     <img src="./image/nus115.png" />
                 </div>
                 <div class="gallery-item">
-                    <img src="./image/haze.png" />
+                    <img src="./image/kampong.png" />
+                </div>
+                <div class="gallery-item">
+                    <img src="./image/qf.png" />
+                </div>
+                <div class="gallery-item">
+                    <img src="./image/sqroom.png" />
                 </div>
                 <div class="gallery-item">
                     <img src="./image/haze.png" />
                 </div>
                 <div class="gallery-item">
-                    <img src="./image/haze.png" />
+                    <img src="./image/mnd.png" />
                 </div>
                 <div class="gallery-item">
-                    <img src="./image/nus115.png" />
+                    <img src="./image/happy-hands.png" />
+                </div>
+                <div class="gallery-item">
+                    <img src="./image/ah-intra.png" />
+                </div>
+                <div class="gallery-item">
+                    <img src="./image/nna.png" />
+                </div>
+                <div class="gallery-item">
+                    <img src="./image/mha.png" />
+                </div>
+                <div class="gallery-item">
+                    <img src="./image/moh.png" />
                 </div>
             </div>
         </div>
@@ -133,22 +147,43 @@
                     </p>
                 </div>
                 <div class="number-block">
-                    <div class="col-4 block">
+                    <div class="col-md-4 block">
                         <p class="number">1095</p>
                         <p class="label">Cups of coffee</p>
                     </div>
-                    <div class="col-4 block">
-                        <p class="number">1460</p>
+                    <div class="col-md-4 block">
+                        <p class="number" id="numDays">1151</p>
                         <p class="label">Days of experience</p>
                     </div>
-                    <div class="col-4 block">
-                        <p class="number">100</p>
+                    <div class="col-md-4 block">
+                        <p class="number">20</p>
                         <p class="label">Projects completed</p>
                     </div>
                 </div>
             </div>
         </div>
     </main>
+
+    <footer class="content-block">
+        <div class="container">
+            <div class="heading">
+                <label>CONTACT</label>
+                <h2>
+                    Let’s get connected
+                </h2>
+            </div>
+
+            <div class="contact">
+                <a target="_blank" href="https://www.linkedin.com/in/derricklkh"><i class="fab fa-linkedin"></i></a>
+                <a target="_blank" href="https://www.instagram.com/derrick_lkh/">
+                    <i class="fab fa-instagram"></i></a>
+                <a target="_blank" href="mailto:derrick872k@gmail.com" target="_top"><i class="far fa-envelope"></i></a>
+            </div>
+            <span class="copyright">
+          Copyright ©2020 All rights reserved
+        </span>
+        </div>
+    </footer>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/slick.min.js" type="text/javascript"></script>
